[package]
name = "same-content"
version = "0.1.9"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/magiclen/same-content"
homepage = "https://magiclen.org/same-content"
keywords = ["file", "reader", "same", "data", "stream"]
categories = ["development-tools::debugging"]
description = "Determine whether data from different sources are the same."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
generic-array = "0.14"
tokio = { version = "1.12", features = ["fs", "io-util"], optional = true }

[dev-dependencies]
tokio = { version = "1.12", features = ["rt", "macros"] }

[package.metadata.docs.rs]
features = true
